@@ -50,6 +50,7 @@ public interface DVector3C {
 	public double get2();
 	public float[] toFloatArray();
 	public DVector3 clone();
+	public boolean isEq(DVector3C v);
 	public double lengthSquared();
 	public double length();
 	/** 
